tests/snapshots/ebook_golden_tests__check_scenario@kindle_panel__OEBPS__Text__cb-0002-cb-d.xhtml.snap
---
source: tests/ebook_golden_tests.rs
expression: payload
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
<head>
<title>cb-0002-cb-d</title>
<link href="style.css" type="text/css" rel="stylesheet"/>
<meta name="viewport" content="width=200, height=500"/>
</head>
<body style="">
<div style="text-align:center;">
<div style="display:none;">.</div>
<img width="200" height="500" src="../Images/cb-0002-cb-d.jpg"/>
</div>
<div id="PV">
</div>
</body>
</html>
<EOF: newline>
